# face-model

./: .gitignore  app.py  convert_to_mobile.py  convert_to_onnx.py  convert_to_torchscript.py  dataset_preview.py  edit_from_dataset.py  face_detector.pth  face_detector.py  face_detector_quantized.pt  inference.py  pyproject.toml  video_detector.py  video_detector_onnx.py
apps/: gradio_app.py  video_detector_onnx.py  video_detector_pytorch.py
scripts/: convert_to_mobile.py  convert_to_onnx.py  convert_to_torchscript.py  train.py
src/face_detection/: __init__.py
src/face_detection/data/: __init__.py  aflw_dataset.py  celeba_dataset.py  coco_dataset.py
src/face_detection/inference/: __init__.py  utils.py
src/face_detection/models/: __init__.py  mobile_face_detector.py
src/face_detection/training/: __init__.py  trainer.py
tools/: dataset_preview.py  edit_from_dataset.py
